Formating the BookCheckoutManagementServiceImplTest and BookCheckoutQueryServiceImplTest. Removing unnecessary data.